--- a/css/ShowProduct.css
+++ b/css/ShowProduct.css
@@ -6,10 +6,15 @@
 
 #productImage
 {
-   width:40%;
-   height:40%;   
+   width:60%;
+   height:60%;   
 }
 #showproductBody
 {
     
+}
+.ui-collapsible-heading a {text-align:center;}​​​
+#header
+{
+  background-color:Red;   
 }
