--- a/css/ShowProduct.css
+++ b/css/ShowProduct.css
@@ -1,6 +1,7 @@
 ﻿body
 {
     text-align: center;
+    direction:rtl;
 }
 
 #productImage
@@ -10,7 +11,7 @@
 }
 #orgName
 {
-    font-size:larger;
+
 }
 #showproductBody
 {
@@ -23,4 +24,14 @@ h2 .ui-btn-inner
 #propertiesAccordion .ui-icon
 {
 /*display:none;*/ 
+}
+.ui-btn-active  
+{
+/*    color: white !important; background: black !important; background-color: black !important; */
+     }
+.ui-page { -webkit-backface-visibility: hidden; }
+
+#myPopup
+{
+
 }
