עדכון עמוד שיתוף קמפיין

--- a/css/FbLogin.css
+++ b/css/FbLogin.css
@@ -2,7 +2,7 @@
 {
     background: url('../BackOffice/img/App_bg.jpg') no-repeat !important ;
     background-attachment:fixed;
-	background-size:cover;
+	background-size:100%;
     text-align: center;
     
     
