--- a/css/ShowProduct.css
+++ b/css/ShowProduct.css
@@ -42,7 +42,53 @@ h2 .ui-btn-inner
      margin-right:auto;  
      text-align:right;
 }
+/* list view */
+#productsOnSale img
+{
+      width:100px;
+      height:100px;
+      right:0;
+    
+}
+    
+    .custom-li .ui-li .ui-btn-text .ui-link-inherit .ui-li-thumb {
+        position:absolute;
+        top:0;
+        bottom:0;
+        margin:auto;
+        right: 0;
+        margin-right: 0 !important;
+    } 
 
+    .custom-li .ui-li .ui-icon {
+        left: 10px !important;    
+    }
+
+    .custom-li .ui-li .ui-btn-text .ui-link-inherit .left {
+        float: right;
+        margin-right: 50px;
+    }
+
+    .custom-li .ui-li .ui-btn-text .ui-link-inherit .left p{
+        text-align: right;
+    }
+        
+    .custom-li .ui-li .ui-btn-text .ui-link-inherit .right {
+        float: right;
+        margin-right: 20px;
+        display:block; 
+        -moz-transform: matrix(-1, 0, 0, 1, 0, 0);
+        -webkit-transform: matrix(-1, 0, 0, 1, 0, 0);
+        -o-transform:matrix(-1, 0, 0, 1, 0, 0);        
+    }
+
+
+    #left-split-icon {
+        left: 0 !important;   
+   
+    }
+
+    .ui-li-link-alt { right: auto !important; } // Fix for jQM 1.3
 /* wrap push on wide viewports once open */
 @media (min-width: 35em){
 	.ui-responsive-panel.ui-page-panel-open .ui-panel-content-fixed-toolbar-open.ui-panel-content-fixed-toolbar-display-push,
