--- a/css/ShowProduct.css
+++ b/css/ShowProduct.css
@@ -29,12 +29,18 @@ h2 .ui-btn-inner
      }
 .ui-page { -webkit-backface-visibility: hidden; }
 
-#productsOnSale img
+#productsOnSale img,
+#scanHistoryList img
 {
   width:100%;
   height:100%;
     position:absolute;
      right:0;
+}
+
+#scanHistoryList
+{
+       text-align:right;
 }
 #orgProfileTB
 {
@@ -57,6 +63,10 @@ h2 .ui-btn-inner
  
  }
 
+#scanHistoryList
+{
+ direction:rtl;   
+}
 
     .ui-li-link-alt { right: auto !important; } // Fix for jQM 1.3
 /* wrap push on wide viewports once open */
