--- a/css/ShowProduct.css
+++ b/css/ShowProduct.css
@@ -4,6 +4,20 @@
     direction:rtl;
 }
 
+body .ui-li .ui-li-desc {
+ white-space: normal;
+ }
+ 
+ body .ui-footer .ui-title {
+ white-space: normal;
+ }
+
+
+#btnShareCampaign
+{ background: #2d6b61;
+  color:White;
+}
+
 #productImage
 {
     width: 60%;
@@ -34,9 +48,10 @@ h2 .ui-btn-inner
 {
   width:100%;
   height:100%;
-    position:absolute;
-     right:0;
+  position:absolute;
+  right:0;
 }
+
 
 #scanHistoryList
 {
@@ -68,7 +83,7 @@ h2 .ui-btn-inner
  direction:rtl;   
 }
 
-    .ui-li-link-alt { right: auto !important; } // Fix for jQM 1.3
+    .ui-li-link-alt { right: auto !important; } 
 /* wrap push on wide viewports once open */
 @media (min-width: 35em){
 	.ui-responsive-panel.ui-page-panel-open .ui-panel-content-fixed-toolbar-open.ui-panel-content-fixed-toolbar-display-push,
@@ -87,3 +102,4 @@ h2 .ui-btn-inner
 		display: none;
 	}
 }
+
