--- a/css/FbLogin.css
+++ b/css/FbLogin.css
@@ -2,21 +2,51 @@
 .ui-page
 {
     background: url('../images/mobile_bg.png.png');
+    background-repeat:no-repeat;
+    background-position:center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-    min-height: 100%;
+    -webkit-background-size: 100%; 
+    -moz-background-size: 100%; 
+    -o-background-size: 100%; 
+    background-size: 100%; 
+    background-attachment:scroll;
+    
+    
 }
+
+.ui-body-c, .ui-overlay-c  
+{
+    background: none;
+  
+} 
 
 body
 {
+
     text-align:center;    
 }
-.fb-login-button
+
+
+
+@media only screen and (min-width : 320px) and (max-width : 480px) 
 {
-    margin-top: 95%;
+    
+.ui-page
+{
+	background: url('../images/mobile_bg.png.png');
+    background-repeat:no-repeat;
+    position:absolute;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    -webkit-background-size: 100%; 
+    -moz-background-size: 100%; 
+    -o-background-size: 100%; 
+    background-size: 100%; 
+    background-attachment:scroll;
+    }
 }
-
-
-
